# MPE_Prototype

./: CMakeLists.txt  README.md  main.cpp
2d_core/vk_core/: cvk_device.hpp  cvk_pipeline.cpp  cvk_pipeline.hpp  cvk_renderer.cpp  cvk_renderer.hpp  cvk_swap_chain.hpp  cvk_window.hpp  first_app.cpp  simple_render_system.cpp
2d_core/vk_core/tests/: rainbow_system.hpp
gui/: custom_objects.hpp  gui_content.hpp
gui/vk_core/: cvk_gui_content.hpp  cvk_imgui.cpp  cvk_imgui.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: manual.md
lib/glm/glm/: common.hpp  exponential.hpp  ext.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
lib/glm/glm/detail/: _features.hpp  func_common.inl  func_common_simd.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric_simd.inl  func_integer.inl  func_packing.inl  glm.cpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_mat4x4_simd.inl  type_quat.hpp  type_quat_simd.inl  type_vec1.hpp  type_vec1.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  (+3 more)
vk_core/: cvk_camera.cpp  cvk_camera.hpp  cvk_device.cpp  cvk_device.hpp  cvk_game_object.hpp  cvk_imgui.cpp  cvk_imgui.hpp  cvk_model.cpp  cvk_model.hpp  cvk_pipeline.cpp  cvk_pipeline.hpp  cvk_renderer.hpp  cvk_swap_chain.cpp  cvk_window.cpp  cvk_window.hpp  first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  simple_render_system.cpp  simple_render_system.hpp
vk_core/gui/: cvk_imgui.cpp  cvk_imgui.hpp
vk_core/shaders/: compile.bat  simple_shader.frag  simple_shader.vert
(+183 files in other folders)
